layout/base/nsLayoutUtils.cpp
@@ -9084,16 +9084,17 @@ nsLayoutUtils::UpdateDisplayPortMarginsFromPendingMessages() {
   if (mozilla::dom::ContentChild::GetSingleton() &&
       mozilla::dom::ContentChild::GetSingleton()->GetIPCChannel()) {
     mozilla::dom::ContentChild::GetSingleton()->GetIPCChannel()->PeekMessages(
-      mozilla::layers::PAPZ::Msg_UpdateFrame__ID,
       [](const IPC::Message& aMsg) -> bool {
-        void* iter = nullptr;
-        FrameMetrics frame;
-        if (!IPC::ReadParam(&aMsg, &iter, &frame)) {
-          MOZ_ASSERT(false);
-          return true;
-        }
+        if (aMsg.type() == mozilla::layers::PAPZ::Msg_UpdateFrame__ID) {
+          void* iter = nullptr;
+          FrameMetrics frame;
+          if (!IPC::ReadParam(&aMsg, &iter, &frame)) {
+            MOZ_ASSERT(false);
+            return true;
+          }
 
-        UpdateDisplayPortMarginsForPendingMetrics(frame);
+          UpdateDisplayPortMarginsForPendingMetrics(frame);
+        }
         return true;
       });
   }
